--- a/admin/index.html
+++ b/admin/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>위치 정보 목록</title>
+    <title>위치 기</title>
     <link rel="icon" href="favicon.png" type="image/png">
   <link rel="manifest" href="manifest.json">
     
@@ -92,7 +92,7 @@
             background: #fff;
             color: #333;
             text-align: center; /* 텍스트 중앙 정렬 */
-            width: 140px; /* 너비 고정으로 깔끔하게 */
+            width: auto; /* 너비 자동으로 깔끔하게 */
         }
         /* 기간 설정의 물결(~) 간격 조정 */
         .date-inputs span { margin: 0 5px; font-weight: bold; color: #888; }
