--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <input type="text" id="username" placeholder="이름 입력" required>
     <br>
     
-    <button id="checkInBtn" onclick="getLocation()">출석하기</button>
+    <button id="checkInBtn" onclick="getLocation()">출  석</button>
     <div id="status"></div>
 
     <script type="module">
